# testestetst

backend/: README.md
backend/booking-service/: .coverage  coverage.xml  main.py  pyproject.toml
backend/booking-service/migrations/versions/: eb533997f261_delete_dummy_field.py
backend/booking-service/src/api/routes/: booking_routes.py
backend/booking-service/src/messaging/: direct_message_facade.py  messaging_manager.py  pubsub_facade.py
backend/booking-service/src/models/db/: desk_booking.py
backend/booking-service/src/models/dto/: desk_booking_create_request.py  desk_booking_create_response.py
backend/booking-service/src/repositories/: booking_repository.py
backend/booking-service/src/services/: desk_booking_service.py
backend/booking-service/tests/unit/: test_main.py
backend/desk-integration-service/: .env  Dockerfile  pyproject.toml
backend/desk-inventory-service/: pyproject.toml
backend/gateway/: .coverage  coverage.xml  main.py  pyproject.toml
backend/gateway/tests/: test_main.py
backend/occupancy-service/: main.py  pyproject.toml
backend/occupancy-service/src/config/: settings.py
backend/occupancy-service/src/messaging/: mqtt_client.py  rabbitmq_publisher.py
backend/occupancy-service/src/routers/: occupancy.py
backend/occupancy-service/src/services/: occupancy_service.py
backend/user-service/: pyproject.toml
embedded_pico/DeskOccupancyMonitoring/: DeskOccupancyMonitoring.cpp
